--- a/exercises/CMakeLists.txt
+++ b/exercises/CMakeLists.txt
@@ -14,6 +14,14 @@ add_library(
     Raindrops/raindrops.cpp
     Pangram/pangram.h
     Pangram/pangram.cpp
+    TwoFer/two_fer.h
+    TwoFer/two_fer.cpp
+    GradeSchool/grade_school.h
+    GradeSchool/grade_school.cpp
+    Hamming/hamming.h
+    Hamming/hamming.cpp
+    NucleotideCount/nucleotide_count.h
+    NucleotideCount/nucleotide_count.cpp
 )
 
 target_include_directories(trying PUBLIC "{CMAKE_CURRENT_SOURCE_DIR}")
